--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
-tie into picnik http://www.picnik.com/info/api
+pretty up how page after export with:
 tweet it http://www.twitpic.com/api.do hashtag #wnyb
 upload to flickr http://www.flickr.com/services/api/ flickr pool http://flickr.com/groups/987550@N25/pool/
 
 deploy to GAE
-facebook app
-downloads of different sizes?
+facebook app?
